Add amount range configuration to limit trade prices

--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
   "wallets": [
     "SussybqBBZdrYUvUpNxxT26FFxmX6aksvH57siWTyri"
-],
+  ],
+  "amountRange": [0, 100],
   "trade": {
     "tradeAmount": 0.02,
     "tp": 21,
