--- a/config.json
+++ b/config.json
@@ -2,26 +2,26 @@
   "wallets": [
     "suqh5sHtr8HyJ7q8scBimULPkPpA557prMG47xCHQfK"
   ],
-  "amountRange": [2, 10],
+  "amountRange": [0, 10],
   "trade": {
     "tradeAmount": 0.02,
     "tp": 21,
-    "sl": 15,
+    "sl": 5,
     "slippage": 100,
-    "buyTip": 0.001,
+    "buyTip": 0.0001,
     "sellTip": 0.0001,
     "prioFee": 2,
     "timeout": 200,
-    "simulation": false,
+    "simulation": true,
     "sell": {
       "mode": "tp",
       "takeProfits": [
         {
-          "percentage": 30,
+          "percentage": 5,
           "sellPercent": 50
         },
         {
-          "percentage": 40,
+          "percentage": 10,
           "sellPercent": 50
         }
       ]
